--- a/app/templates/recipes/recipe_form.html
+++ b/app/templates/recipes/recipe_form.html
@@ -168,7 +168,7 @@
                                 <div class="row align-items-center">
                                     <div style="display: none;">
                                         {{ ingredient.id }}
-                                        {{ ingredient.product_id }}
+                                        {{ ingredient.product_id(class_='ingredient-id-input') }}
                                     </div>
                                     
                                     <div class="col-md-5">
