--- a/app/templates/products/product_form.html
+++ b/app/templates/products/product_form.html
@@ -23,7 +23,7 @@
                     </h5>
                 </div>
                 <div class="card-body p-4">
-                    <form method="POST" novalidate>
+                    <form method="POST" enctype="multipart/form-data" novalidate>
                         {{ form.hidden_tag() }}
                         
                         <div class="row">
@@ -113,6 +113,19 @@
                                 {% endif %}
                                 <div class="form-text">Référence unique du produit / UGS (optionnel).</div>
                             </div>
+                        </div>
+
+                        <div class="mb-3">
+                            {{ form.image.label(class="form-label fw-semibold") }}
+                            {{ form.image(class="form-control" + (" is-invalid" if form.image.errors else "")) }}
+                            {% if form.image.errors %}
+                                <div class="invalid-feedback d-block">{% for error in form.image.errors %}{{ error }}{% endfor %}</div>
+                            {% endif %}
+                            {% if product and product.image_filename %}
+                                <div class="mt-2">
+                                    <img src="{{ url_for('static', filename='img/products/' ~ product.image_filename) }}" alt="Aperçu" class="img-thumbnail" style="max-width: 200px;">
+                                </div>
+                            {% endif %}
                         </div>
 
                         <div class="d-flex gap-2 mt-4">
