--- a/app/templates/stock/dashboard_magasin.html
+++ b/app/templates/stock/dashboard_magasin.html
@@ -145,7 +145,10 @@
                                         <div class="progress-bar progress-100"></div>
                                     {% endif %}
                                 </div>
-                                <small>Seuil: {{ ingredient.seuil_magasin or 50 }} {{ ingredient.unit or 'unités' }}</small>
+                                <div class="d-flex justify-content-between">
+                                    <small>Seuil: {{ ingredient.seuil_magasin or 50 }} {{ ingredient.unit or 'unités' }}</small>
+                                    <small class="text-white-50">{{ "%.2f"|format(ingredient.valeur_stock_ingredients_magasin or 0) }} DA</small>
+                                </div>
                             </div>
                         </div>
                         {% endfor %}
@@ -205,7 +208,7 @@
                                     </div>
                                     <div class="d-flex justify-content-between">
                                         <small>Seuil: {{ seuil }}</small>
-                                        <small>{{ ingredient.supplier_name or 'Fournisseur non défini' }}</small>
+                                        <small class="text-white-50">{{ "%.2f"|format(ingredient.valeur_stock_ingredients_magasin or 0) }} DA</small>
                                     </div>
                                 </div>
                             </div>
